--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -86,4 +86,5 @@ jobs:
         run: |
             echo "starting..."
             cd terraform
-            terraform apply -auto-approve theplan
+            #terraform apply -auto-approve theplan
+            terraform destroy -auto-approve
